# disentangle-sycophancy

./: README.md  main.py  pyproject.toml  requirements.txt
data/: praise.json  truthfulqa.jsonl
data/factorial/: cities_neg_factorial.json  cities_pos_factorial.json  claims_factorial.json  companies_factorial.json  counterfactual_factorial.json  math_factorial_small.json  smaller_than_factorial.json  sp_en_trans_factorial.json  sp_en_trans_pro_factorial.json
data/truthfulqa/: test.jsonl  train.jsonl
scripts/: run_all_steering.sh  run_diffmean_analysis.sh  run_nullspace_weight_gen.sh  run_roberta.sh
src/: cross_effects.py  diffmean_analysis.py  nullspace_weight_gen.py  praise_roberta.py  praise_steering.py  truthful_steering.py
src/utils/: __init__.py  dataset.py  evaluation.py  file_io.py  generation.py  model_utils.py  text_processing.py
